--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,35 @@
-{"name": "saveit-app", "version": "1.0.0", "private": true, "dependencies": {"react": "^17.0.2", "react-dom": "^17.0.2"},"scripts": {"start": "react-scripts start","build": "react-scripts build","test": "react-scripts test","eject": "react-scripts eject"},"eslintConfig": {"extends": ["react-app", "react-app/jest"]},"browserslist": [">0.2%", "not dead", "not op_mini all"]}
+{
+  "name": "saveit-frontend",
+  "version": "1.0.0",
+  "description": "Frontend for SaveIt App",
+  "private": true,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "axios": "^1.3.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
+}
