--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,16 @@
   "description": "Backend for SaveIt App",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "concurrently \"node server.js\" \"cd ../frontend && npm start\"",
+    "server": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "sqlite3": "^5.1.6",
     "dotenv": "^16.0.3",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "concurrently": "^7.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
